@@ -1,6 +1,5 @@
 package de.kifo.commands.music;
 
-import com.google.common.collect.ImmutableList;
 import com.google.inject.Inject;
 import de.kifo.JavaBot;
 import de.kifo.commands.handle.CommandBase;
@@ -9,6 +8,7 @@ import de.kifo.common.api.model.SongDTO;
 import de.kifo.common.exceptions.CommandException;
 import de.kifo.common.music.PlayerManager;
 import de.kifo.common.music.TrackScheduler;
+import de.kifo.common.services.MessageService;
 import net.dv8tion.jda.api.entities.Guild;
 import net.dv8tion.jda.api.entities.GuildVoiceState;
 import net.dv8tion.jda.api.entities.Member;
@@ -22,16 +22,17 @@ import net.dv8tion.jda.api.interactions.commands.build.OptionData;
 import net.dv8tion.jda.api.managers.AudioManager;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
+import static de.kifo.JavaBot.messageService;
 import static de.kifo.common.api.model.HistoryEntryDTO.Type.SONG_PLAY;
 import static de.kifo.common.enums.exception.ExceptionType.BOT_ALREADY_PLAYING_FOR_GUILD;
 import static de.kifo.common.enums.exception.ExceptionType.NOT_IN_SPEECH_CHANNEL;
-import static de.kifo.common.enums.message.Message.MessageType.MESSAGE;
-import static de.kifo.common.music.TrackScheduler.map;
-import static de.kifo.common.util.EmbedUtils.getEmbedMessageByText;
 import static java.lang.System.currentTimeMillis;
 import static java.util.Objects.isNull;
+import static java.util.Objects.nonNull;
 import static net.dv8tion.jda.api.interactions.commands.OptionType.STRING;
 
 @CommandBase.BotCommand(name = "play", description = "Wähle ein Lied, das abgespielt werden soll.", hasOptions = true)
@@ -39,6 +40,8 @@ public class PlayCommand extends CommandBase {
 
     @Inject
     private JavaBot javaBot;
+
+    public static Map<Long, MessageService.UpdatableMessage> map = new HashMap<>();
 
     public PlayCommand(@NotNull BotCommand command) {
         super(command);
@@ -64,17 +67,34 @@ public class PlayCommand extends CommandBase {
 
         manager.openAudioConnection(voiceChannel);
 
-        String url = options.get(0).getAsString();
-        if (!url.startsWith("http")) {
-            url = "ytsearch:" + url + " audio";
+        String[] url = {options.get(0).getAsString()};
+        if (!url[0].startsWith("http")) {
+            url[0] = "ytsearch:" + url[0] + " audio";
         }
-        event.replyEmbeds(getEmbedMessageByText("Suche nach dem Titel...", MESSAGE)).queue();
 
-        playerManager.play(event.getGuild(), url, member.getIdLong());
-        map.put(voiceChannel.getGuild().getIdLong(), textChannel);
+        event.deferReply().queue();
+
+        MessageService.UpdatableMessage updatableMessage = new MessageService.UpdatableMessage(
+                event.getHook().sendMessageEmbeds(messageService.info("Suche nach dem Titel...")).complete()
+        );
+
+        playerManager.play(guild, url[0], event.getUser().getIdLong())
+                .thenCompose(updatedMessage -> {
+                    String description = updatedMessage.getDescription();
+                    if (nonNull(description) && description.contains("Das Lied startet jetzt.")) {
+                        return updatableMessage.update(updatedMessage);
+                    }
+                    return updatableMessage.updateAndDestroyAfter(updatedMessage, 60);
+                })
+                .exceptionally(e -> {
+                    updatableMessage.fail();
+                    return null;
+                });
+
+        map.putIfAbsent(voiceChannel.getGuild().getIdLong(), updatableMessage);
 
         javaBot.getApi().createHistoryEntry(new HistoryEntryDTO(null, guild.getIdLong(), member.getIdLong(),
-                SONG_PLAY, currentTimeMillis(),"Query " + url + ", " + textChannel.getName()));
+                SONG_PLAY, currentTimeMillis(),"Query " + url[0] + ", " + textChannel.getName()));
     }
 
     @Override
@@ -91,7 +111,7 @@ public class PlayCommand extends CommandBase {
     }
 
     @Override
-    public List<OptionData> getOptions() {
-        return ImmutableList.of(new OptionData(STRING, "song", "Titel oder URL vom Lied", true, true));
+    public @NotNull List<OptionData> getOptions() {
+        return List.of(new OptionData(STRING, "song", "Titel oder URL vom Lied", true, true));
     }
 }
